name:          mu-example-health-check
version:       0.3.0.0
synopsis:
  Example health-check project from mu-scala (with protobuf) ported to mu-haskell

description:
  Example health-check project from mu-scala (with protobuf) ported to mu-haskell.

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 47 Degrees. <http://47deg.com>
category:      Network
build-type:    Simple
cabal-version: >=1.10
data-files:    healthcheck.proto
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

executable health-server
  main-is:          Server.hs
  other-modules:    Definition
  build-depends:
      async
    , base            >=4.12  && <5
    , conduit
    , deferred-folds
    , mu-graphql
    , mu-grpc-server  >=0.3.0
    , mu-prometheus
    , mu-protobuf     >=0.3.0
    , mu-rpc          >=0.3.0
    , mu-schema       >=0.3.0
    , stm
    , stm-conduit
    , stm-containers
    , text
    , wai
    , warp

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable health-client-tyapps
  main-is:          ClientTyApps.hs
  other-modules:    Definition
  build-depends:
      base            >=4.12  && <5
    , conduit
    , mu-grpc-client  >=0.3.0
    , mu-protobuf     >=0.3.0
    , mu-rpc          >=0.3.0
    , mu-schema       >=0.3.0
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable health-client-record
  main-is:          ClientRecord.hs
  other-modules:    Definition
  build-depends:
      base            >=4.12  && <5
    , conduit
    , mu-grpc-client  >=0.3.0
    , mu-protobuf     >=0.3.0
    , mu-rpc          >=0.3.0
    , mu-schema       >=0.3.0
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
