name:          mu-example-health-check
version:       0.4.0.0
synopsis:
  Example health-check project from mu-scala (with protobuf) ported to mu-haskell

description:
  Example health-check project from mu-scala (with protobuf) ported to mu-haskell.

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 47 Degrees. <http://47deg.com>
category:      Network
build-type:    Simple
cabal-version: >=1.10
data-files:    healthcheck.proto
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

executable health-server
  main-is:          Server.hs
  other-modules:    Definition
  build-depends:
      async             >=2.2   && <3
    , aeson
    , base              >=4.12  && <5
    , conduit           >=1.3.2 && <2
    , deferred-folds    >=0.9   && <0.10
    , mu-graphql        >=0.4.0
    , mu-grpc-server    >=0.4.0
    , mu-prometheus     >=0.4.0
    , mu-protobuf       >=0.4.0
    , mu-rpc            >=0.4.0
    , mu-schema         >=0.3.0
    , mu-servant-server >=0.4.0
    , mu-tracing        >=0.4.0
    , prometheus-client >= 1    && <2
    , servant-server
    , servant-swagger-ui
    , stm               >=2.5   && <3
    , stm-conduit       >=4     && <5
    , stm-containers    >=1.1   && <2
    , swagger2
    , text              >=1.2   && <2
    , tracing-control   >=0.0.6
    , wai               >=3.2   && <4
    , warp              >=3.3   && <4

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable health-client-tyapps
  main-is:          ClientTyApps.hs
  other-modules:    Definition
  build-depends:
      base            >=4.12  && <5
    , aeson
    , conduit         >=1.3.2 && <2
    , mu-grpc-client  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , swagger2
    , text            >=1.2   && <2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable health-client-record
  main-is:          ClientRecord.hs
  other-modules:    Definition
  build-depends:
      base            >=4.12  && <5
    , aeson
    , conduit         >=1.3.2 && <2
    , mu-grpc-client  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , swagger2
    , text            >=1.2   && <2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
