name:          mu-example-route-guide
version:       0.4.0.0
synopsis:
  Example route-guide project from mu-scala ported to mu-haskell

description:
  Example route-guide project from mu-scala ported to mu-haskell.

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 47 Degrees. <http://47deg.com>
cabal-version: >=1.10
category:      Network
build-type:    Simple
data-files:    routeguide.proto
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

executable route-guide-server
  main-is:          Server.hs
  other-modules:    Definition
  build-depends:
      AC-Angle
    , async
    , base            >=4.12  && <5
    , conduit
    , hashable
    , mu-grpc-server  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , stm
    , stm-chans
    , text
    , time
    , transformers

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
