name:               mu-example-seed
version:            0.3.0.0
synopsis:
  Example seed project from mu-scala (with protobuf) ported to mu-haskell

description:
  Example seed project from mu-scala (with protobuf) ported to mu-haskell.

license:            Apache-2.0
license-file:       LICENSE
author:             Flavio Corpa, Alejandro Serrano
maintainer:         flavio.corpa@47deg.com
copyright:          Copyright © 2019-2020 47 Degrees. <http://47deg.com>
category:           Network
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md
data-files:
  *.proto
  *.avdl

homepage:
  https://github.com/higherkindness/mu-haskell/examples/seed/protobuf#readme

bug-reports:        https://github.com/higherkindness/mu-haskell/issues

executable seed-server
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Schema
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
  build-depends:
      async           >=2.2   && <3
    , base            >=4.12  && <5
    , conduit         >=1.3.2 && <2
    , monad-logger    >=0.3   && <0.4
    , mu-graphql      >=0.4.0
    , mu-grpc-server  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , random          >=1.1   && <2
    , stm             >=2.5   && <3
    , text            >=1.2   && <2
    , wai             >=3.2   && <4

executable seed-server-optics
  hs-source-dirs:   src
  main-is:          Optics.hs
  other-modules:    Schema
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
  build-depends:
      base            >=4.12  && <5
    , conduit         >=1.3.2 && <2
    , monad-logger    >=0.3   && <0.4
    , mu-grpc-server  >=0.4.0
    , mu-optics       >=0.3.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , random          >=1.1   && <2
    , stm             >=2.5   && <3
    , text            >=1.2   && <2

executable seed-server-lens
  hs-source-dirs:   src
  main-is:          Lens.hs
  other-modules:    Schema
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
  build-depends:
      base            >=4.12  && <5
    , conduit         >=1.3.2 && <2
    , lens
    , monad-logger    >=0.3   && <0.4
    , mu-grpc-server  >=0.4.0
    , mu-lens         >=0.3.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.0
    , random          >=1.1   && <2
    , stm             >=2.5   && <3
    , text            >=1.2   && <2
