name:          mu-example-todolist
version:       0.3.0.0
synopsis:      Example todolist project from mu-scala ported to mu-haskell
description:
  Example todolist project from mu-scala ported to mu-haskell.

license:       Apache-2.0
license-file:  LICENSE
author:        Flavio Corpa, Alejandro Serrano
maintainer:    flavio.corpa@47deg.com
copyright:     Copyright © 2020 47 Degrees. <http://47deg.com>
category:      Network
build-type:    Simple
cabal-version: >=1.10
data-files:    todolist.proto
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

executable todolist-server
  main-is:          Server.hs
  other-modules:    Definition
  build-depends:
      base            >=4.12  && <5
    , mu-grpc-server  >=0.3.0
    , mu-protobuf     >=0.3.0
    , mu-rpc          >=0.3.0
    , mu-schema       >=0.3.0
    , stm
    , text
    , transformers

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
