name:                mu-example-with-persistent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/higherkindness/mu-haskell/examples/with-persistent#readme
author:              Flavio Corpa
maintainer:          flavio.corpa@47deg.com
copyright:           Copyright © 2019-2020 47 Degrees. <http://47deg.com>
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable persistent-server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Schema
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , conduit
                     , mu-schema
                     , mu-rpc
                     , mu-protobuf
                     , mu-grpc-server
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , text
