name:               mu-grpc-client
version:            0.4.0.2
synopsis:           gRPC clients from Mu definitions
description:
  With @mu-grpc-client@ you can easily build gRPC clients for mu-haskell!

license:            Apache-2.0
license-file:       LICENSE
author:             Alejandro Serrano, Flavio Corpa
maintainer:         alejandro.serrano@47deg.com
copyright:          Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:           Network
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: CHANGELOG.md
homepage:           https://higherkindness.io/mu-haskell/
bug-reports:        https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:
    Mu.GRpc.Client.Examples
    Mu.GRpc.Client.Optics
    Mu.GRpc.Client.Record
    Mu.GRpc.Client.TyApps

  other-modules:    Mu.GRpc.Client.Internal
  build-depends:
      async              >=2.2   && <3
    , avro               >=0.5.1 && <0.6
    , base               >=4.12  && <5
    , bytestring         >=0.10  && <0.11
    , conduit            >=1.3.2 && <2
    , http2              >=1.6   && <2.1
    , http2-client       >=0.9   && <1
    , http2-client-grpc  >=0.8   && <0.9
    , http2-grpc-types   >=0.5   && <0.6
    , mu-grpc-common     >=0.4   && <0.5
    , mu-optics          >=0.3   && <0.4
    , mu-protobuf        >=0.4   && <0.5
    , mu-rpc             >=0.4   && <0.6
    , mu-schema          >=0.3   && <0.4
    , optics-core        >=0.2   && <0.4
    , sop-core           >=0.5   && <0.6
    , stm                >=2.5   && <3
    , stm-chans          >=3     && <4
    , stm-conduit        >=4     && <5
    , template-haskell   >=2.14  && <2.17
    , text               >=1.2   && <2
    , th-abstraction     >=0.3.2 && <0.5
    , tracing-control    >=0.0.7

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
