name:          mu-grpc-common
version:       0.3.0.0
synopsis:      gRPC for Mu, common modules for client and server
description:
  Use @mu-grpc-server@ or @mu-grpc-client@ (the common parts).

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
cabal-version: >=1.10
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:
    Mu.GRpc.Avro
    Mu.GRpc.Bridge

  build-depends:
      avro                    >=0.5
    , base                    >=4.12  && <5
    , binary
    , bytestring
    , http2-grpc-proto3-wire
    , http2-grpc-types
    , mu-avro                 >=0.3.0
    , mu-protobuf             >=0.3.0
    , mu-rpc                  >=0.3.0
    , mu-schema               >=0.3.0

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
