cabal-version:       >=1.10
name:                mu-grpc-server
version:             0.1.0.0
synopsis:            gRPC servers for Mu definitions
description:         With @mu-grpc-server@ you can easily build gRPC servers for mu-haskell!
license:             Apache-2.0
license-file:        LICENSE
author:              Alejandro Serrano, Flavio Corpa
maintainer:          alejandro.serrano@47deg.com
copyright:           Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md
homepage:            https://higherkindness.io/mu-haskell/
bug-reports:         https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:     Mu.GRpc.Server
  build-depends:       base >=4.12 && <5
                     , async
                     , bytestring
                     , conduit
                     , http2-grpc-proto3-wire
                     , http2-grpc-types
                     , mtl
                     , mu-protobuf
                     , mu-rpc
                     , mu-schema
                     , sop-core
                     , stm
                     , stm-conduit
                     , wai
                     , warp
                     , warp-grpc
                     , warp-tls
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fprint-potential-instances

executable grpc-example-server
  main-is:             ExampleServer.hs
  other-modules:       Mu.GRpc.Server
  build-depends:       base >=4.12 && <5
                     , async
                     , bytestring
                     , conduit
                     , http2-grpc-proto3-wire
                     , http2-grpc-types
                     , mtl
                     , mu-protobuf
                     , mu-rpc
                     , mu-schema
                     , sop-core
                     , stm
                     , stm-conduit
                     , wai
                     , warp
                     , warp-grpc
                     , warp-tls
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
