name:               mu-grpc-server
version:            0.3.0.0
synopsis:           gRPC servers for Mu definitions
description:
  With @mu-grpc-server@ you can easily build gRPC servers for mu-haskell!

license:            Apache-2.0
license-file:       LICENSE
author:             Alejandro Serrano, Flavio Corpa
maintainer:         alejandro.serrano@47deg.com
copyright:          Copyright © 2019-2020 <http://47deg.com 47 Degrees>
cabal-version:      >=1.10
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md
homepage:           https://higherkindness.io/mu-haskell/
bug-reports:        https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:  Mu.GRpc.Server
  build-depends:
      async
    , avro              >=0.5
    , base              >=4.12    && <5
    , binary
    , bytestring
    , conduit
    , http2-grpc-types
    , mtl
    , mu-grpc-common    >=0.3.0
    , mu-protobuf       >=0.3.0
    , mu-rpc            >=0.3.0
    , mu-schema         >=0.3.0
    , sop-core
    , stm
    , stm-conduit
    , wai
    , warp
    , warp-grpc         >=0.4.0.1
    , warp-tls

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable grpc-example-server
  main-is:          ExampleServer.hs
  other-modules:    Mu.GRpc.Server
  build-depends:
      async
    , avro              >=0.4.7
    , base              >=4.12    && <5
    , binary
    , bytestring
    , conduit
    , http2-grpc-types
    , mtl
    , mu-grpc-common    >=0.3.0
    , mu-protobuf       >=0.3.0
    , mu-rpc            >=0.3.0
    , mu-schema         >=0.3.0
    , sop-core
    , stm
    , stm-conduit
    , wai
    , warp
    , warp-grpc         >=0.4.0.1
    , warp-tls

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
