name:               mu-grpc-server
version:            0.5.0.0
synopsis:           gRPC servers for Mu definitions
description:
  With @mu-grpc-server@ you can easily build gRPC servers for mu-haskell!

license:            Apache-2.0
license-file:       LICENSE
author:             Alejandro Serrano, Flavio Corpa
maintainer:         alejandro.serrano@47deg.com
copyright:          Copyright © 2019-2020 <http://47deg.com 47 Degrees>
cabal-version:      >=1.10
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md
homepage:           https://higherkindness.io/mu-haskell/
bug-reports:        https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:  Mu.GRpc.Server
  build-depends:
      async             >=2.2     && <3
    , avro              >=0.5.1   && <0.6
    , base              >=4.12    && <5
    , binary            >=0.8     && <0.9
    , bytestring        >=0.10    && <0.11
    , conduit           >=1.3.2   && <2
    , http2-grpc-types  >=0.5     && <0.6
    , mtl               >=2.2     && <3
    , mu-grpc-common    >=0.4     && <0.5
    , mu-protobuf       >=0.4     && <0.5
    , mu-rpc            >=0.5     && <0.6
    , mu-schema         >=0.3     && <0.4
    , sop-core          >=0.5     && <0.6
    , stm               >=2.5     && <3
    , stm-conduit       >=4       && <5
    , wai               >=3.2     && <4
    , warp              >=3.3     && <4
    , warp-grpc         >=0.4.0.1 && <0.5
    , warp-tls          >=3.2     && <4

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable grpc-example-server
  main-is:          ExampleServer.hs
  build-depends:
      async             >=2.2     && <3
    , avro              >=0.5.1   && <0.6
    , base              >=4.12    && <5
    , binary            >=0.8     && <0.9
    , bytestring        >=0.10    && <0.11
    , conduit           >=1.3.2   && <2
    , http2-grpc-types  >=0.5     && <0.6
    , mtl               >=2.2     && <3
    , mu-grpc-common    >=0.4     && <0.5
    , mu-grpc-server
    , mu-protobuf       >=0.4     && <0.5
    , mu-rpc            >=0.5     && <0.6
    , mu-schema         >=0.3     && <0.4
    , sop-core          >=0.5     && <0.6
    , stm               >=2.5     && <3
    , stm-conduit       >=4       && <5
    , wai               >=3.2     && <4
    , warp              >=3.3     && <4
    , warp-grpc         >=0.4.0.1 && <0.5
    , warp-tls          >=3.2     && <4

  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-explicit-kinds -fprint-explicit-foralls
