name:          mu-prometheus
version:       0.5.0.0
synopsis:      Metrics support for Mu using Prometheus
description:   Get metrics of your running Mu servers using Prometheus
license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
cabal-version: >=1.10
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:  Mu.Instrumentation.Prometheus
  build-depends:
      base                       >=4.12 && <5
    , lifted-base                >=0.2  && <0.3
    , monad-control              >1     && <2
    , mu-rpc                     >=0.5  && <0.6
    , prometheus-client          >1     && <2
    , text                       >=1.2  && <2
    , wai                        >=3.2  && <4
    , wai-middleware-prometheus  >1     && <2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
