name:               mu-servant-server
version:            0.4.0.0
synopsis:           Servant servers for Mu definitions
description:
  With @mu-servant-server@ you can easily build Servant servers for mu-haskell!

license:            Apache-2.0
license-file:       LICENSE
author:             Andre Marianiello
maintainer:         alejandro.serrano@47deg.com
copyright:          Copyright © 2019-2020 <http://47deg.com 47 Degrees>
cabal-version:      >=1.10
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md
homepage:           https://higherkindness.io/mu-haskell/
bug-reports:        https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:  Mu.Servant.Server
  build-depends:
      aeson           >=1.4   && <2
    , async           >=2.2   && < 3
    , base            >=4.12  && <5
    , conduit         >=1.3.2 && <2
    , generic-aeson   >=0.2   && <0.3
    , ghc-prim        >=0.5   && <0.7
    , mtl             >=2.2   && <3
    , mu-rpc          ==0.4.*
    , mu-schema       ==0.3.*
    , servant         >=0.16  && <0.19
    , servant-server  >=0.16  && <0.19
    , servant-swagger >=1.1.7 && <2
    , stm             >=2.5   && <3
    , swagger2        >=2.5   && <3
    , utf8-string     >=1     && <2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable servant-example-server
  main-is:          ExampleServer.hs
  build-depends:
      aeson           >=1.4   && <2
    , base            >=4.12  && <5
    , conduit         >=1.3.2 && <2
    , mu-rpc          ==0.4.*
    , mu-schema       ==0.3.*
    , mu-servant-server
    , servant-server  >=0.16  && <0.19
    , text            >=1.2   && <2
    , warp            >=3.3   && <4

  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-explicit-kinds -fprint-explicit-foralls
