name:               mu-docker-example
version:            0.3.0.0
synopsis:           Example of a mu-haskell service deployed with Docker
description:        Example of a mu-haskell service deployed with Docker.
license:            Apache-2.0
license-file:       LICENSE
author:             Alejandro Serrano, Flavio Corpa
maintainer:         alejandro.serrano@47deg.com
copyright:          Copyright © 2020 <http://47deg.com 47 Degrees>
cabal-version:      >=1.10
category:           Network
build-type:         Simple
bug-reports:        https://github.com/higherkindness/mu-haskell/issues
extra-source-files: README.md

executable mu-docker-example
  main-is:          Main.hs
  build-depends:
      base            >=4.12  && <5
    , mu-grpc-server  >=0.3.0
    , mu-rpc          >=0.3.0
    , mu-schema       >=0.3.0

  default-language: Haskell2010
  ghc-options:      -Wall
