cabal-version:       >=1.10
name:                mu-example-health-check-avro
version:             0.1.0.0
-- synopsis:
-- description:
bug-reports:         https://github.com/higherkindness/mu-haskell/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Alejandro Serrano, Flavio Corpa
maintainer:          alejandro.serrano@47deg.com
copyright:           Copyright © 2020 47 Degrees. <http://47deg.com>
category:            Network
build-type:          Simple
data-files:          healthcheck.avdl

executable health-server-avro
  main-is:             Server.hs
  other-modules:       Definition
  build-depends:       base >=4.12 && <5
                     , text
                     , mu-schema
                     , mu-rpc
                     , mu-avro
                     , mu-grpc-server
                     , stm
                     , stm-conduit
                     , stm-containers,
                       deferred-folds
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable health-client-tyapps-avro
  main-is:             ClientTyApps.hs
  other-modules:       Definition
  build-depends:       base >=4.12 && <5
                     , text
                     , mu-schema
                     , mu-rpc
                     , mu-avro
                     , mu-grpc-client
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable health-client-record-avro
  main-is:             ClientRecord.hs
  other-modules:       Definition
  build-depends:       base >=4.12 && <5
                     , text
                     , mu-schema
                     , mu-rpc
                     , mu-avro
                     , mu-grpc-client
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


